--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,5 @@ jobs:
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.DOS2_TEST_PAT }}
-          repository: MPihlap/PinewoodPip.github.io
+          repository: PinewoodPip/PinewoodPip.github.io
           event-type: update_versions
